# Lime

./: .gitignore  .gitmodules  CMakeLists.txt  ProgrammingStyle.md  README.md  TODO.md  Tasklist.txt  default_sortcuts.txt  main.cpp  readWrite.cpp  readWrite.hpp
cpp-terminal documentation/: Index.md
cpp-terminal-gui/: Label.cpp  Label.hpp  README.md  RenderTrait.hpp
cpp-terminal-gui/cpp-terminal-gui/: CMakeLists.txt  Label.cpp  Label.hpp  RenderTrait.hpp
cpp-terminal_tryout/: .gitignore  CMakeLists.txt  README.md  build.bat  build_clang.bat  build_gcc.bat  build_vs17.bat  cpp_terminal_tryout.cpp
lime/: Lime.cpp  Lime.hpp
modules/cpp-terminal-gui/: CMakeLists.txt  Label.hpp  README.md  RenderTrait.hpp
modules/cpp-terminal-gui/cpp-terminal-gui/: ColorString.cpp  ColorString.hpp  ColorThemes.hpp  ColoredString.cpp  ColoredString.hpp  Command.hpp  CommandLine.cpp  CommandLine.hpp  CommandList.cpp  CommandList.hpp  EditTrait.hpp  FontStyle.hpp  FontStyleList.cpp  FontStyleList.hpp  GridCell.cpp  GridCell.hpp  GridTrait.hpp  Grids.hpp  HorizontalGrid.cpp  HorizontalGrid.hpp  Label.cpp  Label.hpp  Line.cpp  Line.hpp  RenderTrait.hpp  TextCursor.cpp  TextCursor.hpp  TextEditor.cpp  TextEditor.hpp  VerticalGrid.cpp  VerticalGrid.hpp
modules/cpp-terminal-gui/test/: CMakeLists.txt  ColoredString_test.cpp  CommandList_test.cpp  TextEditor_test.cpp  iStylesList_test.cpp  test.txt  writeTest.txt
modules/cpp-terminal-gui/test/data_ColoredString/Verified/: color_string
modules/unicode/: CMakeLists.txt
modules/unicode/utf8/: char.hpp  char_impl.hpp  char_reference.hpp  char_reference_impl.hpp  char_reference_type.hpp  char_type.hpp  common.hpp  string.hpp  string_impl.hpp  string_iterator.hpp  string_iterator_impl.hpp  string_iterator_type.hpp  string_type.hpp  string_view.hpp  string_view_impl.hpp  string_view_type.hpp
modules/utf8_string/: CMakeLists.txt  README.md  test.cpp  utf8_char.hpp  utf8_string.hpp
modules/utf8_string/test/: CMakeLists.txt  test_utf8_char.cpp  test_utf8_string.cpp
modules/utf8_string/utf8/: char.hpp  char_reference.hpp  string.hpp  string_iterator.hpp  string_view.hpp  wstring.hpp
modules/verification/: CMakeLists.txt  readme.md  verification.cpp  verification.hpp
modules/verification/test/: CMakeLists.txt  verification_test.cpp
test/: verification_test.cpp
testing/: test.cpp
utf8_string/: utf8_string.hpp
utf8_string/test/: test_utf8_string.cpp
verification/: readme.md  verification.cpp
